# szg-sarbach

./: .gitignore  .replit  DEPLOYMENT.md  README.md  USER_MANUAL.md  manage.py  pyproject.toml  pytest.ini  replit.md
admin_panel/: tests.py  urls.py  views.py
appointments/: admin.py  models.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
blog_app/: admin.py  models.py  tests.py  urls.py  views.py
blog_app/migrations/: 0001_initial.py
clinic/: admin.py  models.py  tests.py  urls.py  views.py
clinic/migrations/: 0001_initial.py
core/: admin.py  context_processors.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_sitesettings_about_content_sitesettings_about_image_and_more.py
deploy_package/: .env.example  DEPLOY_INSTRUCTIONS.txt  UPDATE_FROM_GITHUB.txt  gunicorn.conf.py  nginx_sarbach.conf  requirements.txt  settings_production.py  szg_sarbach.service
fixtures/: initial_data.json
shop/: admin.py  models.py  tests.py  urls.py  views.py
shop/migrations/: 0001_initial.py
static/css/: custom.css  original_custom.css
szg_sarbach/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/admin_panel/: addon_list.html  addon_order_list.html  appointment_list.html  banner_list.html  base_admin.html  blog_list.html  city_list.html  dashboard.html  department_list.html  diet_list.html  doctor_appointments.html  doctor_dashboard.html  doctor_list.html  enquiry_list.html  examination_list.html  hotel_list.html  medicine_list.html  order_detail.html  order_list.html  settings.html  (+7 more)
(+28 files in other folders)
